nfv4-nohelm/nf_pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nf
spec:
  selector:
    matchLabels:
      app: nf
  template:
    metadata:
      labels:
        app: nf
    spec:
      containers:
        - name: nf
          image: kimchanghyun/nfv4:latest
          ports:
            - containerPort: 10003
            - containerPort: 80  
          volumeMounts:
           - name: nfdata
             mountPath: /app/netfunnel4/data
      volumes:
      - name: nfdata
        persistentVolumeClaim:
          claimName: surffy
---
apiVersion: v1
kind: Service
metadata:
  name: nf
spec:
  selector:
    app: nf
  ports:
    - protocol: TCP
      port: 10003
      targetPort: 10003
---
apiVersion: v1
kind: Service
metadata:
  name: nf80
spec:
  selector:
    app: nf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
