nfv4-nohelm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nf
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: "/ts.wseq"
        backend:
          service:
            name: nf80
            port:
              number: 80
